server/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  selector:
    app: server
  ports:
    - port: 80
      targetPort: http
