server/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: server
spec:
  podSelector:
    matchLabels:
      app: server
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: envoy
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: envoy
      ports:
        - port: 80
